<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="logo">logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="next">Next</string>
    <string name="old">old</string>
    <string name="man">man</string>
    <string name="girls">girls</string>
    <string name="kids">kids</string>
    <string name="oldCheckBox">Old</string>
    <string name="menCheckBox">Men</string>
    <string name="girlsCheckBox">Girls</string>
    <string name="kidsCheckBox">Kids</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy
        text of the printing and typesetting industry.
    </string>
    <string name="get_started">GET STARTED</string>
</resources>
